--- a/mysite/static/css/base/one_column.css
+++ b/mysite/static/css/base/one_column.css
@@ -2,8 +2,6 @@
    One day, we'll probably want to review this and clean it up. */
 
 body.one_column #main { float: left; }
-body.one_column #main .module > .module-head { width: 950px; }
-body.one_column #main .module > .module-body { width: 910px; }
 body.one_column #main .submodule .head h3 { font-weight: normal; font-size: 11pt; }
 body.one_column #main .submodule .body, #main .submodule .foot { padding: 3% 5%; float: left; }
 
